2008-08-21  Marek Kasik  <mkasik@redhat.com>

	* ChangeLog: changelog update for previous commit

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	Bug 535158 – can't rearrange the order of multi pages per side

	* gtk/gtkprinter.c
	* gtk/gtkprinter.h
	* gtk/gtkprintunixdialog.c
	* gtk/gtkprintsettings.c
	* gtk/gtkprintsettings.h
	* gtk/gtkenums.h
	* modules/printbackends/cups/gtkprintbackendcups.c: Allow user to
	specify layout of pages per sheet in number-up mode

Wed Aug 20 18:16:29 2008  Søren Sandmann  <sandmann@redhat.com>

	* gdk/x11/gdkscreen-x11.c (_gdk_x11_screen_size_changed): Emit the
	monitors changed signal when the screen size changes.

2008-08-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Bug 548346 – gtk_color_selection_dialog_get_color_selection always
	returns NULL

	* gtk/gtkcolorseldialog.c
	(gtk_color_selection_dialog_get_color_selection): Use the correct
	macro to test the validity of the passed-in dialog.

2008-08-05  Milan Crha  <mcrha@redhat.com>

	* gtk/gtknotebook.c: (gtk_notebook_do_arrow): Allow changing page with
	arrows even on non-focusable notebook. (#528091)

2008-08-19  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=543308 - The file
	chooser in "compact" mode uses the same size as in "open" mode.

	* gtk/gtkfilechooserdialog.c (gtk_file_chooser_dialog_map): Don't
	force the default size here.  Let GtkFileChooserDefault be solely
	in charge of default sizing.
	(set_default_size): Removed obsolete code.

	* gtk/gtkfilechooserdefault.c (emit_default_size_changed): New
	helper function, to avoid dupliated code.  Only emits the signal
	if the widget is mapped, because that is when we actually know the
	size we'll want.
	(update_preview_widget_visibility): Use emit_default_size_changed()
	(update_appearance): Likewise.
	(gtk_file_chooser_default_style_set): Likewise.
	(gtk_file_chooser_default_screen_changed): Likewise.
	(gtk_file_chooser_default_map): Likewise.